ui: Fix navbar on mobile devices

--- a/src/sass/mixin/_media-query.scss
+++ b/src/sass/mixin/_media-query.scss
@@ -8,3 +8,9 @@
     @content;
   }
 }
+
+@mixin co-x-media-mobile() {
+  @media (max-width: 767px) {
+    @content;
+  }
+}
