--- a/src/ui/dropdown/_dropdown.scss
+++ b/src/ui/dropdown/_dropdown.scss
@@ -10,4 +10,15 @@
       color: $white;
     }
   }
+
+  // Mobile overrides
+  @include co-x-media-mobile {
+    > li > a {
+      color: $blue-link;
+      &:hover {
+        background-color: $color-bg-mute;
+        color: $blue-link;
+      }
+    }
+  }
 }
